fix(KtComment): avatar gets squashed with large comments the comment-wrapper had flex: 1 1 auto changing it to flex: 1 means that it became flex: 1 1 0 the flex-basis is the third property/value changing it to `0` means that the elements WON'T change size after the space is redistributed this guarantees that the comment_wrapper doesn't take more space, ...and therefore squash the avatar

--- a/packages/kotti-ui/source/kotti-style/_comments.scss
+++ b/packages/kotti-ui/source/kotti-style/_comments.scss
@@ -15,7 +15,7 @@
 
 .comment__wrapper {
 	display: flex;
-	flex: 1 1 auto;
+	flex: 1;
 	flex-direction: column;
 	margin-left: 0.4rem;
 }
